# llms-rag-embeddings

./: readme.md  test.md
Articles Agent/: .env-exanple  Readme.md  arxiv.py  arxiv2.py  endpoint.py  main.py  requirements.txt
Articles Agent/api/: dependencies.py  routes.py
Articles Agent/core/: config.py  logging.py
Articles Agent/models/: schemas.py
Articles Agent/services/: arxiv.py  llm.py  paper_processor.py
podcast_youtube_analyzer/: README.md  main.py  main2.py
podcast_youtube_analyzer/transcripts/: JyAAgxQGeJY_20241123_050317_summary.md  JyAAgxQGeJY_20241123_050317_transcript.md  pAcF3GV4ygM_20241123_050445_summary.md  pAcF3GV4ygM_20241123_050445_transcript.md
test_crewai/: README.md  pyproject.toml  report.md
test_crewai/src/test_crewai/: --0report.md  crew.py  main.py  report.md
test_crewai/src/test_crewai/agentops/: client.py
