[project]
name = "test_crewai"
version = "0.1.0"
description = "test_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
test_crewai = "test_crewai.main:run"
run_crew = "test_crewai.main:run"
train = "test_crewai.main:train"
replay = "test_crewai.main:replay"
test = "test_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
